tests/paczka1/fuzzy1/32999850.err
Error in line 14: e7y6gv A964 95,8
Error in line 21: f6TKk A964 98,1
Error in line 24: f6TKk S512 53,4
Error in line 17: Wm9T9VZX A932 13,2
Error in line 26: N1nxFu3f A964 86,4
Error in line 35: e7y6gv A932 k3,7
Error in line 27: f6TKk A932 98,4
